[package]
name = "secp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
ark-ff = { git = "https://github.com/arkworks-rs/algebra/", rev = "6bf24dd0dc6e97ce25b11815c7ac38a2aeb212eb" }
ark-ec = { version="^0.3.0", default-features = false }
ark-std = { version="^0.3.0", default-features = false }
