[package]
name = "secp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
ark-std = { git = "https://github.com/arkworks-rs/std", rev = "05b7a19a99551bdd737eb2ffb1c9eac7be0dd11f" }
ark-ff = { git = "https://github.com/arkworks-rs/algebra/", rev = "6bf24dd0dc6e97ce25b11815c7ac38a2aeb212eb" }
ark-ec = { git = "https://github.com/arkworks-rs/algebra/", rev = "6bf24dd0dc6e97ce25b11815c7ac38a2aeb212eb" }
